--- a/src/header.css
+++ b/src/header.css
@@ -25,3 +25,9 @@
     background-color: #f1f1f1;
     color: black;
 }
+
+@media only screen and (max-width: 855px) { 
+    .navbar {
+        display: none;
+    }   
+}
