--- a/src/styles.css
+++ b/src/styles.css
@@ -139,7 +139,7 @@ color: inherit;
     border-radius: 15px;
 }
 
-@media only screen and (max-width: 855px) {
+@media only screen and (max-width: 855px), (pointer:none), (pointer:coarse) {
     .background-image {
         position: fixed;
         height: 100vh;
@@ -195,48 +195,3 @@ color: inherit;
     }
     
 }
-
-/*
-
-.homepage-info {
-    background-color: #F1F1F1;
-    padding: 15px 0;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    align-items: center;
-}
-
-.homepage-info > div {
-    width: 50%;
-    text-align: justify;
-}
-
-.homepage-info-images-text {
-    width: 100%;
-    display: flex;
-    gap: 50px;
-}
-
-.homepage-info-images-text > img {
-    height: 200px;
-}
-
-
-.homepage-info-images { 
-    display: flex;
-    justify-content: space-between;
-    gap: 25px;
-    max-width: 100%;
-    flex-wrap: wrap;
-    padding: 25px 0;
-}
-
-.homepage-info-images > img {
-    max-width: 100%;
-    object-fit: cover;
-    height: 200px;
-    border-radius: 15px;
-}
-*/
