--- a/src/header.css
+++ b/src/header.css
@@ -1,3 +1,5 @@
+/* Homepage Navbar */
+
 .navbar {
     position: absolute;
     top: 0;
@@ -10,18 +12,57 @@
     align-items: center;
 }
 
-.navbar > a {
-    cursor: pointer;
-    font-size: 1.25rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
+/* Dropwdown Stuff */
+
+.navbar > div {
     flex-grow: 1;
     height: 100%;
 }
+  
+.dropbtn {
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    font-size: 1.25rem;
+    color: white;
+    background-color: transparent;
+    border: none;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+  
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
 
-.navbar > a:hover {
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    top: 100%;
+    min-width: 100%;
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content{
+    display: block;
+}
+
+.dropdown:hover .dropbtn {
     background-color: #f1f1f1;
     color: black;
 }
