--- a/src/styles.css
+++ b/src/styles.css
@@ -50,12 +50,12 @@ color: inherit;
 .homepage-frontscreen {
     display: flex;
     width: 100vw;
-    height: 92vh;
+    height: 85vh;
 }
 
 .homepage-left {
     width: calc(100vw * (2/5));
-    background-color: rgba(253, 253, 253, 0.7);
+    background-color: rgba(253, 253, 253, 0.75);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -64,7 +64,7 @@ color: inherit;
 
 .homepage-right {
     width: calc(100vw * (3/5));
-    background-color: rgba(26, 26, 26, 0.75);
+    background-color: rgba(26, 26, 26, 0.7);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -125,7 +125,7 @@ color: inherit;
 
 .homepage-info-images { /* Normal image Layout (Above or below text) */
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 25px;
     max-width: 100%;
     flex-wrap: wrap;
