--- a/src/styles.css
+++ b/src/styles.css
@@ -99,7 +99,7 @@ color: inherit;
 
 .homepage-info {
     background-color: #F1F1F1;
-    padding: 15px 0;
+    padding: 15px 0 50px 0;
     width: 100vw;
     display: flex;
     flex-direction: column;
