--- a/src/pages.css
+++ b/src/pages.css
@@ -49,28 +49,40 @@ color: inherit;
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-size: 2.5rem;
+    box-shadow: 0 0 10px gray;
 }
 
 /* Body of member page */
 
 .bli-medlem-info {
-    width: 100vw;
-    padding: 15px 0;
+    width: 60vw;
+    padding: 100px 0;
+    position: absolute;
+    top: calc((100px + 250px) - (36px + 50px + 32px));
+    left: 50%;
+    transform: translate(-50%);
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: left;
+    background-color: white;
+    border-radius: 25px;
+    box-shadow: 0 0 10px gray;
+}
+
+.bli-medlem-info > h1 {
+    font-size: 3rem;
+    margin-top: 0;
+    text-align: center;
 }
 
 .important {
     font-size: 2rem;
-    margin-bottom: 5px;
 }
 
 .bold {
     font-weight: bold;
-    margin-top: 0;
+    margin-top: -24px;
     font-size: 1.25rem
 }
 
@@ -89,10 +101,29 @@ color: inherit;
         font-size: 1.75rem;
     }
 
-    .bli-medlem-info > * {
-        width: 75%;
+    .bli-medlem-info {
+        top: 200px;
+        box-shadow: unset;
+        border-radius: unset;
+        background-color: unset;
+        padding: 50px 0;
+        width: 95vw;
     }
+
+    .bli-medlem-info > h1 {
+        text-align: left;
+    }
+
+    .bold {
+        margin-top: unset;
+        font-size: 1rem;
+    }
+
+    .bli-medlem-info > * {
+        width: 90%;
+    }
+ 
     .important {
-        font-size: 1.25rem;
+        font-size: 1.10rem;
     }
 }
