--- a/src/pages.css
+++ b/src/pages.css
@@ -7,6 +7,7 @@ body, html {
     scroll-behavior: smooth;
     margin: 0;
     overflow-x: hidden;
+    background-color: #f1f1f1;
 }
 
 /* Link behavior */
@@ -49,7 +50,6 @@ color: inherit;
     justify-content: center;
     align-items: center;
     text-align: center;
-    box-shadow: 0 0 10px gray;
 }
 
 .cover > h1 {
